# orchestrator

./: .coverage  .gitignore  AGENTS.md  README.md  multi_agent_sdlc_system.md  orchestrate_sdlc.sh  pyproject.toml
.beads/: interactions.jsonl  metadata.json
legacy/: orchestrate_sdlc.sh
src/orchestrator/: agents.py  beads.py  broker_wrapper.py  config.py  main.py  memory_wrapper.py  service.py  utils.py
tests/: test_agents.py  test_basics.py  test_beads.py  test_broker_wrapper.py  test_main.py  test_memory_wrapper.py  test_message_driven.py  test_service.py  test_utils.py  test_utils_logging.py
tools/: broker  memory
